# headscale-operator

./: Cargo.toml  flake.nix  package.nix  readme.md  steiger.yml
.github/workflows/: build.yaml  ci.yml  release.yaml
config-manager/: Cargo.toml  package.nix
config-manager/src/: config.rs  main.rs  process.rs
docs/: acl-policy.md  headscale.md  policy.md  preauth-key.md  tailscale-sidecar.md  user.md
headscale-operator/: Cargo.toml  package.nix
headscale-operator/src/: helper.rs  kustomization.yaml  main.rs  rbac.rs
headscale-operator/src/admission/: headscale.rs  mod.rs  sidecar.rs
headscale-operator/src/crds/: aclpolicy.rs  headscale.rs  mod.rs  policy.rs  preauth_key.rs  user.rs
headscale-operator/src/handlers/: headscale.rs  mod.rs  policy.rs  preauth_key.rs
helm/: Chart.yaml  values.yaml
helm/templates/: admission-controller.yaml  certificate.yaml  cluster-role-binding.yaml  cluster-role.yaml  crds.yaml  deployment.yaml  service-account.yaml  service.yaml
manifests/: acls.yaml  certificate.yaml  database.yaml  headscale.yaml  kustomization.yaml  preauth-key.yaml  sidecar-pod.yaml  user.yaml
scripts/: push
src/: ext.rs  helper.rs  main.rs
src/admission/: sidecar.rs
src/crds/: aclpolicy.rs  headscale.rs  mod.rs  preauth_key.rs  user.rs
src/handlers/: aclpolicy.rs  headscale.rs  mod.rs  preauth_key.rs  user.rs
