[package]
name = "headscale-operator"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "ws"] }
kubus = "0.4.1"
k8s-openapi = { version = "0.26.0", features = ["v1_34", "schemars"] }
k8s-openapi-ext = { git = "https://github.com/juliamertz/k8s-openapi-ext-rs" }
schemars = { version = "1.0.4", features = ["raw_value"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
hex = "0.4.3"
rand = "0.9.2"
serde_with = "3.15.0"
anyhow = "1.0.100"
thiserror = "2.0.17"
async-trait = "0.1.89"
