[workspace]
resolver = "3"
members = ["config-manager","headscale-operator"]

[workspace.dependencies]
kube = { version = "2.0.1", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.26.0", features = ["v1_34", "schemars"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
clap = { version = "4.5.48", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
