[workspace]
resolver = "3"
members = ["config-manager","headscale-operator"]

[workspace.dependencies]
kube = { version = "2", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.27.0", features = ["v1_34", "schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
