[package]
name = "headscale-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "headscale-operator"
path = "src/main.rs"

[dependencies]
kube = { workspace = true }
kubus = { version = "0.6.0" }
k8s-openapi = { workspace = true }
k8s-openapi-ext = "0.26.7"
schemars = { version = "1.0.4", features = ["raw_value"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
serde_yaml = "0.9.34"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hex = "0.4.3"
rand = "0.9.2"
serde_with = "3.15.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1.89"
json-patch = "4.1.0"
version-compare = "0.2.1"
